fixed  too wide news for mobile devices

--- a/css/general.css
+++ b/css/general.css
@@ -91,11 +91,11 @@
 }
 @media (min-width: 768px) and (max-width: 925px) {
     .navbar-right{
-        position: absolute;
+       /* position: absolute;
         top: 2px!important;
         right: 5px!important;
         display: block;
-        cursor: pointer;
+        cursor: pointer;*/
     }
 
 }
